Added reflectors and durability indicators

--- a/index.html
+++ b/index.html
@@ -166,6 +166,19 @@
             </center>
         </div>
     </div>
+    
+    <div class="panel" style="float:top;display:block;">
+        <div class="panel-title">Reflectors</div>
+        <div id="condensators-grid" class="grid">
+        <center>
+            <div class="panel-row">
+                <div class="panel-cell reflector"></div>
+                <div class="panel-cell reflector-thick"></div>
+                <div class="panel-cell reflector-iridium"></div>
+            </div>
+            </center>
+        </div>
+    </div>
 </div>
 
 <div class="panel" id="info" style="float:top-right;display:inline-block; min-height:200px; max-height:300px;max-width:250px;visibility:hidden;">
