Allowed for initial hull heat to be set

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
         <button id="fastsim">Fast Simulation</button>
         <button id="stopsim">Stop Simulation</button>
         <button id="resetsim">Reset Simulation</button>
+        Initial Heat <input type="number" size=5 id="initial-heat" value="0" min="0" max="10000" step="1"/>HU
     </center>
 </div>
 
